// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Usermotion's identify destination action: all fields 1`] = `
Object {
  "anonymousId": "m5@snjS^ncZB*",
  "id": "m5@snjS^ncZB*",
  "properties": Object {
    "email": "gi@kigot.bh",
    "testType": "m5@snjS^ncZB*",
  },
}
`;

exports[`Testing snapshot for Usermotion's identify destination action: required fields 1`] = `
Object {
  "id": "m5@snjS^ncZB*",
  "properties": Object {
    "email": "gi@kigot.bh",
  },
}
`;
